# ariel-os-hello

./: Cargo.toml  laze-project.yml  rust-toolchain.toml
.github/workflows/: build.yml
src/: main.rs
