[package]
name = "ariel-os-hello"
version = "0.1.0"
edition = "2021"

[dependencies]
ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = [
  "threading",
] }
ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }

[[bin]]
# This block is needed to disable the default test harness.
# We're using embedded-test instead.
name = "ariel-os-hello"     # needs to match the package name set above
harness = false

[dev-dependencies]
embedded-test = { version = "0.5.0", features = ["ariel-os"] }
